fixed spacing for use cases

--- a/ansible-middleware-nextgen/src/App.css
+++ b/ansible-middleware-nextgen/src/App.css
@@ -115,3 +115,7 @@
 .learn-more-tab {
   visibility: hidden;
 }
+
+.use_cases {
+  max-width: 30%;
+}
